# sdl

./: movement  movement.cpp
GameEngine/: CMakeLists.txt  GameEngine.code-workspace  TODO.md  mygame
GameEngine/res/: hitboxes.yaml  player.yaml  tilemap.yaml  tilesheet.yaml
GameEngine/src/: GraphicsObject.hpp  IRenderable.hpp  Renderer.cpp  Renderer.hpp  TileMapper.hpp  Tilesheet.hpp  main.cpp
GameEngine/src/Sprites/: AnimatedSprite.hpp  Character.hpp  TileGroup.hpp  mygame
GameEngine/src/helpers/: SDL_RectMath.hpp  calc_collision_rects_relative.py  misc.cpp
GameEngine/tests/: main.test  main.test.cpp
Sprites/: AnimatedSprite.hpp  Character.hpp  main.cpp  mygame  player.yaml
